--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My homework9</title>
+    <!--[if IE]>
+    <link rel="stylesheet" type="text/css" href="css/ie.css"/>
+    <![endif]-->
     <script src="js/html5shiv.js"></script>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
