--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My homework9</title>
-    <!--[if IE]>
-    <link rel="stylesheet" type="text/css" href="css/ie.css"/>
-    <![endif]-->
     <script src="js/html5shiv.js"></script>
+    <script type="text/javascript" src="css/PIE.htc"></script>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style768.css">
     <link rel="stylesheet" href="css/style480.css">
     <link rel="stylesheet" href="css/style320.css">
+    <!--[if IE]>
+    <link rel="stylesheet" type="text/css" href="css/styleie8.css"/>
+    <![endif]-->
   </head>
 <body>
     <header>
